# AbletonTestModularMadness

./: .gitignore  CMakeLists.txt  README.md
AbletonTestModularMadness/: NetworkController.cpp  NetworkController.hpp  main.cpp
AbletonTestModularMadness.xcodeproj/: project.pbxproj
AbletonTestModularMadness.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
AbletonTestModularMadness.xcodeproj/project.xcworkspace/xcuserdata/fvm.xcuserdatad/: UserInterfaceState.xcuserstate
AbletonTestModularMadness.xcodeproj/xcuserdata/fvm.xcuserdatad/xcschemes/: xcschememanagement.plist
AbletonTestModularMadness/Model/: Network.cpp  Network.hpp
AbletonTestModularMadness/Model/Module/: BaseModule.hpp  DelayModule.cpp  DelayModule.hpp  EchoModule.cpp  EchoModule.hpp  Module.cpp  Module.hpp  ModuleFactory.cpp  ModuleFactory.hpp  NoopModule.cpp  NoopModule.hpp  ReverseModule.cpp  ReverseModule.hpp
ModularMadness/: ModularMadness  NetworkController.cpp  main.cpp
ModularMadness/Model/: Network.hpp
ModularMadness/Model/Module/: BaseModule.cpp  ModuleFactory.hpp  NoopModule.cpp  ReverseModule.hpp
ModularMadnessTests/: test_modules.cpp  test_network.cpp  tests_main.cpp
src/Model/: Network.cpp  Network.hpp
src/Model/Module/: DelayModule.cpp  DelayModule.hpp  EchoModule.cpp  EchoModule.hpp  Module.cpp  Module.hpp  ModuleFactory.cpp  NoopModule.cpp  NoopModule.hpp  ReverseModule.cpp  ReverseModule.hpp
